# Mini-Search-Engine

./: CMakeLists.txt  README.md  dsa_engine.cpp  dsa_engine.hpp  main.cpp
documents/: 000001_April.txt  000002_August.txt  000003_Art.txt  000004_Arithmetic.txt  000005_Addition.txt  000006_Australia.txt  000008_Aquaculture.txt  000010_Abrahamic_religions.txt  000011_Atom.txt  000013_Astronomy.txt  000014_Diffuse_Objects.txt  000015_Anatomy.txt  000016_Angola.txt  000017_Argentina.txt  000018_Austria.txt  000019_Armenia.txt  000020_Application.txt  000021_Animal.txt  000022_Bankruptcy.txt  000023_Bottle.txt  000024_Chemistry.txt  000025_Computer.txt  000027_Colchester.txt  000028_City.txt  000029_Coin.txt  000030_Cytology.txt  000031_Capitalization.txt  000032_Cost_of_living.txt  000033_Dissolution_of_the_monasteries.txt  000034_Depth.txt  000035_Definition.txt  000036_Death.txt  000037_Earth_science.txt  000038_Earth.txt  000039_Et_cetera.txt  000040_Ethics.txt  000041_E_Prime.txt  000042_Ebola_virus.txt  000044_Chemical_element.txt  000045_Flesch_Reading_Ease.txt  (+904 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
